dont give explicit config to lights restart

--- a/provision/roles/lights/handlers/main.yml
+++ b/provision/roles/lights/handlers/main.yml
@@ -4,4 +4,4 @@
 - name: lights
   shell: supervisorcrl update
 - name: lights
-  supervisorctl: name=lights state=started config=/etc/supervisor/supervisord.conf
+  supervisorctl: name=lights state=started
