--- a/provision/roles/mopidy/tasks/main.yml
+++ b/provision/roles/mopidy/tasks/main.yml
@@ -10,12 +10,15 @@
      - libspotify-dev
    apt: name=$item
  - template: src=asound.conf.j2 dest=/etc/asound.conf
+ - git: repo=https://github.com/woutervanwijk/Mopidy-Webclient.git dest=/home/pi/Mopidy-Webclient
+   sudo: False
  - file: dest=/home/pi/.config/mopidy/ state=directory owner=pi group=pi
  - template: src=mopidy.conf.j2 dest=/home/pi/.config/mopidy/mopidy.conf
    sudo: False
  - with_items:
      - pyspotify
      - Mopidy-Spotify
+     - Mopidy-SoundCloud
    pip: name=$item
  - template: src=mopidy.conf.supervisor.j2 dest=/etc/supervisor/conf.d/mopidy.conf
    notify: mopidy
