--- a/provision/roles/api/tasks/main.yml
+++ b/provision/roles/api/tasks/main.yml
@@ -2,7 +2,7 @@
 - with_items:
     - redis-server
     - uwsgi
-  apt: name=$item
+  apt: name={{ item }}
 - pip: name=flask state=latest
 - template: src=api.conf.j2 dest=/etc/supervisor/conf.d/api.conf
 - shell: supervisorctl update
