--- a/provision/roles/lights/tasks/main.yml
+++ b/provision/roles/lights/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+- synchronize: src=../ dest=/home/pi/homeautomation recursive=yes
 - name: update apt cache
   apt: update_cache=yes
 - name: install packages
@@ -8,7 +9,6 @@
     - python-lirc
   apt: name={{ item }}
 - pip: name=requests state=latest
-- git: repo=https://github.com/wuub/homeautomation.git dest=/home/pi/homeautomation
 - name: modifi kernel modules
   lineinfile: dest=/etc/modules regexp=^lirc_dev line=lirc_dev
   notify: lirc
