--- a/provision/roles/alarm_clock/tasks/main.yml
+++ b/provision/roles/alarm_clock/tasks/main.yml
@@ -1,7 +1,14 @@
 ---
+- synchronize: src=../ dest=/home/pi/homeautomation recursive=yes
 - pip: name=python-mpd2
 - pip: name=rxv
+- pip: name=redis
+- pip: name=requests
 - file: name=/home/pi/homeautomation/alarm_clock/alarm_clock.py mode=755
+- file: name=/home/pi/homeautomation/alarm_clock/phone_detection.py mode=755
+- file: name=/home/pi/homeautomation/alarm_clock/lights_off.py mode=755
+- cron: name="phone_detection" minute="*" job="/home/pi/homeautomation/alarm_clock/phone_detection.py"
+- cron: name="lights_off" minute="*" job="/home/pi/homeautomation/alarm_clock/lights_off.py"
 - name: Adding alarms
   with_items:
     - day: 1
