--- a/ansible/mediacenter.yml
+++ b/ansible/mediacenter.yml
@@ -8,3 +8,4 @@
     - {name: install Kodi, role: kodi}
     - {name: install Docker, role: docker}
     - {name: install unifi controller, role: unifi_controller}
+    - {name: install lychee photo manager, role: lychee}
